# valsalice-iot-23

./: .gitignore  Makefile  Makefile.lab  README.md
examples/jamlab_example-ng/: Makefile  custom_memory.ld  jamlab_example.c  project-conf.h  settings_cc2420_rssi.c  settings_cc2420_rssi.h  settings_jamlab.c  settings_jamlab.h
lab/: Makefile  Makefile.include
lab/ipv6/: Makefile  Makefile.target  client.c  node.c  server.c
lab/nullnet/: Makefile  receiver.c  sender.c
lab/remote_led_demo/: Makefile  receiver.c  sender.c
lab/shell/: Makefile
lab/week01/: fibonacci.c  hello_input.c  user_info.c
lab/week02/: basic_calculations.c  basic_types.c  enhanced_calculator.c  family.c
lab/week03/: basic_comparisons.c  basic_types.c  enhanced_calculator.c  fizz_buzz.c  repeat_checker.c  valid_checker.c
lab/week04/: comparison.c  even_odd.c  fizz_buzz.c  for_loop.c  hello.c  loop.c  table.c
lab/week05/: advanced.c  algebra.c  fibonacci.c  function.c  squares.c
lab/week06/: advanced.c  algebra.c  array.c  simple.c
lab/week07/: Makefile  advanced.c  blinker.c  simple.c
lab/week08/: Makefile  blinker.c  button.c  rainbow.c
lab/week09/: Makefile  blinker.c  button.c  rainbow.c  simple_timer.c  traffic.c
lab/week10/: advanced.c  simple.c
lab/week11/: advanced.c  medium.c  nested.c  simple.c
lab/week12/: counter.c  ping.c  receiver.c  sender.c  simple_timer.c
lab/week13/: counter.c  receiver.c  repeat.c
scripts/: .gitignore  cherry-pick.py  common.py  git_api.py  pyproject.toml  scoring.py  setup.py
simulations/: nullnet.csc  rpl.csc  rpl_udp.csc
(+114 files in other folders)
